# asistente-ia

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/asistente_ia/: core.py
src/asistente_ia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
